--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -17,3 +17,6 @@ bcrypt==3.2.0
 sqlalchemy-utils==0.36.8
 python-multipart==0.0.5
 pyjwt==1.7.1
+pydantic==1.9.0
+pydantic-settings==0.2.5
+python-dotenv
